<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.4</version>
		<relativePath/>
	</parent>

	<groupId>com.inzynierka2k24</groupId>
	<artifactId>external-integration-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>external-integration-service</name>
	<description>external-integration-service</description>

	<properties>
		<java.version>17</java.version>

		<proto.version>0.0.5</proto.version>

		<grpc-spring-boot.version>5.1.5</grpc-spring-boot.version>
		<grpc.version>1.58.0</grpc.version>
		<playwright.version>1.40.0</playwright.version>
        <lombok.version>1.18.30</lombok.version>
        <mockito.version>5.2.0</mockito.version>
        <testcontainers.version>1.17.6</testcontainers.version>
        <fmt.version>2.20</fmt.version>
        <snakeyaml.version>2.2</snakeyaml.version>
	</properties>

	<repositories>
		<repository>
			<id>github</id>
			<name>GitHub Inzynierka2k24 Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/Inzynierka2k24/inzynierka</url>
		</repository>
	</repositories>

	<dependencies>
	    <!--   Spring    -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

		<!-- gRPC -->
		<dependency>
			<groupId>com.inzynierka2k24</groupId>
			<artifactId>proto</artifactId>
			<version>${proto.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.lognet</groupId>
			<artifactId>grpc-spring-boot-starter</artifactId>
			<version>${grpc-spring-boot.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>netty-tcnative-boringssl-static</artifactId>
					<groupId>io.netty</groupId>
				</exclusion>
				<exclusion>
					<artifactId>grpc-netty-shaded</artifactId>
					<groupId>io.grpc</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.grpc</groupId>
			<artifactId>grpc-netty</artifactId>
			<version>${grpc.version}</version>
		</dependency>

		<!--   Crawling   -->
		<dependency>
			<groupId>com.microsoft.playwright</groupId>
			<artifactId>playwright</artifactId>
			<version>${playwright.version}</version>
		</dependency>

        <!--   Misc    -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

        <!--   Testing    -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.grpc</groupId>
			<artifactId>grpc-testing</artifactId>
			<version>${grpc.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
                <groupId>com.spotify.fmt</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
                <version>${fmt.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>

</project>
